--- a/page.html
+++ b/page.html
@@ -25,7 +25,7 @@
             
             function setup() {
                 createCanvas(windowWidth, windowHeight).position(0, 0).style("z-index", -1);
-                background('#eceff1');
+                background('#000000');
                 textSize(42);
             }
                         
